@@ -2,7 +2,7 @@ use warnings;
 use strict;
 use Gscan2pdf::Document;
 use Glib qw(TRUE FALSE);    # To get TRUE and FALSE
-use Test::More tests => 15;
+use Test::More tests => 16;
 
 BEGIN {
     use_ok('Gscan2pdf::Config');
@@ -116,7 +116,7 @@ Gscan2pdf::Config::add_defaults( \%output );
     'unpaper on scan'                   => FALSE,
     'unpaper options'                   => undef,
     'OCR on scan'                       => TRUE,
-    'frontend'                          => 'libsane-perl',
+    'frontend'                          => 'libimage-sane-perl',
     'rotate facing'                     => 0,
     'rotate reverse'                    => 0,
     'default filename'                  => '%Da %DY-%Dm-%Dd',
@@ -438,6 +438,26 @@ close $fh or die "Error: cannot close $rc\n";
 %output = Gscan2pdf::Config::read_config( $rc, $logger );
 
 is_deeply( \%output, \%example, 'convert pre-1.8.1 filename codes' );
+
+#########################
+
+$config = <<'EOS';
+{
+   "frontend" : "libsane-perl",
+   "version" : "1.8.0"
+}
+EOS
+open $fh, '>', $rc or die "Error: cannot open $rc\n";
+print $fh $config;
+close $fh or die "Error: cannot close $rc\n";
+
+%example = (
+    "frontend" => "libimage-sane-perl",
+    "version"  => "1.8.0"
+);
+%output = Gscan2pdf::Config::read_config( $rc, $logger );
+
+is_deeply( \%output, \%example, 'convert pre-1.8.4 frontend' );
 
 #########################
 
